; ModuleID = '/home/carl/AnghaBench/qmk_firmware/layouts/community/ergodox/haegin/extr_keymap.c_dance_backspace_ended.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/layouts/community/ergodox/haegin/extr_keymap.c_dance_backspace_ended.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }
%struct.TYPE_4__ = type { i32, i64 }

@HOLD_CTRL = common dso_local global i32 0, align 4
@fib_bspc = common dso_local global %struct.TYPE_5__ zeroinitializer, align 4
@KC_LCTRL = common dso_local global i32 0, align 4
@KC_BSPC = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @dance_backspace_ended(%struct.TYPE_4__* %0, i8* %1) #0 {
  %3 = alloca %struct.TYPE_4__*, align 8
  %4 = alloca i8*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %6 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 8
  %8 = icmp eq i32 %7, 1
  br i1 %8, label %9, label %22

9:                                                ; preds = %2
  %10 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %11 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %10, i32 0, i32 1
  %12 = load i64, i64* %11, align 8
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %18

14:                                               ; preds = %9
  %15 = load i32, i32* @HOLD_CTRL, align 4
  store i32 %15, i32* getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @fib_bspc, i32 0, i32 0), align 4
  %16 = load i32, i32* @KC_LCTRL, align 4
  %17 = call i32 @register_code(i32 %16)
  br label %21

18:                                               ; preds = %9
  %19 = load i32, i32* @KC_BSPC, align 4
  %20 = call i32 @register_code(i32 %19)
  br label %21

21:                                               ; preds = %18, %14
  br label %22

22:                                               ; preds = %21, %2
  ret void
}

declare dso_local i32 @register_code(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
